[tool.poetry]
name = "titanic_ml"
description = "titanic_ml example package"
version = "0.1.0"
authors = [
    "milos <sebastien@eustace.io>",
]

[tool.poetry.dependencies]
requests = "^2.13.0"
scikit-learn = "^1.1.2"
python = "^3.8"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
